Adding changes for search input

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ h2 {
   font-weight: 200;
   letter-spacing: -0.05em;
   color: #898787;
-  padding: 8px 0 8px 12px;
+  padding: 8px 12px;
   margin: 27px 20px 0 50px;
 }
 
